[gd_scene format=4 uid="uid://b16oehg4b3cg8"]

[ext_resource type="Script" uid="uid://qwccyyoqtm7y" path="res://src/demo/nurikabe/solver/demo_solver_board.gd" id="1_1oyp4"]
[ext_resource type="PackedScene" uid="uid://b06aw2k2o1thk" path="res://src/main/nurikabe/game_board.tscn" id="2_ts2fd"]
[ext_resource type="PackedScene" uid="uid://rpgvsnfuo7o5" path="res://src/demo/nurikabe/generator/demo_log.tscn" id="3_16nxf"]
[ext_resource type="PackedScene" uid="uid://h73338s4fipn" path="res://src/demo/nurikabe/solver/command_palette.tscn" id="4_ulbbn"]
[ext_resource type="Script" uid="uid://bvoy1f5e7f8ao" path="res://src/demo/nurikabe/solver/demo_puzzle_archive.gd" id="5_ts2fd"]

[node name="Demo" type="Node" unique_id=1237384723]
script = ExtResource("1_1oyp4")

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=156876354]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameBoardHolder" type="Control" parent="HBoxContainer" unique_id=1259259476]
layout_mode = 2
size_flags_horizontal = 3

[node name="GameBoard" parent="HBoxContainer/GameBoardHolder" unique_id=779353418 instance=ExtResource("2_ts2fd")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -440.0
offset_top = -585.0
offset_right = 200.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 6
size_flags_vertical = 4
grid_string = "                    
     4              
                    
         2          
       3         6  
 5                  
                    
     5         7    
                   4
         4          
                   3
             8      
           2     2  
                    
     4              
11     7       4    
                    
                 4  
"

[node name="TileMapGround" parent="HBoxContainer/GameBoardHolder/GameBoard" index="1" unique_id=1164779139]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAABAAAAAQAAAAAAAAACAAAAAAAAAAAAAAADAAAAAQAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAQAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAQAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAQAAAAAAAAAAAAEAAQAAAAAAAAABAAEAAAAAAAAAAAACAAEAAQAAAAAAAAADAAEAAAAAAAAAAAAEAAEAAQAAAAAAAAAFAAEAAAAAAAAAAAAGAAEAAQAAAAAAAAAHAAEAAAAAAAAAAAAIAAEAAQAAAAAAAAAJAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAABAAIAAQAAAAAAAAACAAIAAAAAAAAAAAADAAIAAQAAAAAAAAAEAAIAAAAAAAAAAAAFAAIAAQAAAAAAAAAGAAIAAAAAAAAAAAAHAAIAAQAAAAAAAAAIAAIAAAAAAAAAAAAJAAIAAQAAAAAAAAAAAAMAAQAAAAAAAAABAAMAAAAAAAAAAAACAAMAAQAAAAAAAAADAAMAAAAAAAAAAAAEAAMAAQAAAAAAAAAFAAMAAAAAAAAAAAAGAAMAAQAAAAAAAAAHAAMAAAAAAAAAAAAIAAMAAQAAAAAAAAAJAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAABAAQAAQAAAAAAAAACAAQAAAAAAAAAAAADAAQAAQAAAAAAAAAEAAQAAAAAAAAAAAAFAAQAAQAAAAAAAAAGAAQAAAAAAAAAAAAHAAQAAQAAAAAAAAAIAAQAAAAAAAAAAAAJAAQAAQAAAAAAAAAAAAUAAQAAAAAAAAABAAUAAAAAAAAAAAACAAUAAQAAAAAAAAADAAUAAAAAAAAAAAAEAAUAAQAAAAAAAAAFAAUAAAAAAAAAAAAGAAUAAQAAAAAAAAAHAAUAAAAAAAAAAAAIAAUAAQAAAAAAAAAJAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAABAAYAAQAAAAAAAAACAAYAAAAAAAAAAAADAAYAAQAAAAAAAAAEAAYAAAAAAAAAAAAFAAYAAQAAAAAAAAAGAAYAAAAAAAAAAAAHAAYAAQAAAAAAAAAIAAYAAAAAAAAAAAAJAAYAAQAAAAAAAAAAAAcAAQAAAAAAAAABAAcAAAAAAAAAAAACAAcAAQAAAAAAAAADAAcAAAAAAAAAAAAEAAcAAQAAAAAAAAAFAAcAAAAAAAAAAAAGAAcAAQAAAAAAAAAHAAcAAAAAAAAAAAAIAAcAAQAAAAAAAAAJAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAABAAgAAQAAAAAAAAACAAgAAAAAAAAAAAADAAgAAQAAAAAAAAAEAAgAAAAAAAAAAAAFAAgAAQAAAAAAAAAGAAgAAAAAAAAAAAAHAAgAAQAAAAAAAAAIAAgAAAAAAAAAAAAJAAgAAQAAAAAAAAAAAAkAAQAAAAAAAAABAAkAAAAAAAAAAAACAAkAAQAAAAAAAAADAAkAAAAAAAAAAAAEAAkAAQAAAAAAAAAFAAkAAAAAAAAAAAAGAAkAAQAAAAAAAAAHAAkAAAAAAAAAAAAIAAkAAQAAAAAAAAAJAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAABAAoAAQAAAAAAAAACAAoAAAAAAAAAAAADAAoAAQAAAAAAAAAEAAoAAAAAAAAAAAAFAAoAAQAAAAAAAAAGAAoAAAAAAAAAAAAHAAoAAQAAAAAAAAAIAAoAAAAAAAAAAAAJAAoAAQAAAAAAAAAAAAsAAQAAAAAAAAABAAsAAAAAAAAAAAACAAsAAQAAAAAAAAADAAsAAAAAAAAAAAAEAAsAAQAAAAAAAAAFAAsAAAAAAAAAAAAGAAsAAQAAAAAAAAAHAAsAAAAAAAAAAAAIAAsAAQAAAAAAAAAJAAsAAAAAAAAAAAAAAAwAAAAAAAAAAAABAAwAAQAAAAAAAAACAAwAAAAAAAAAAAADAAwAAQAAAAAAAAAEAAwAAAAAAAAAAAAFAAwAAQAAAAAAAAAGAAwAAAAAAAAAAAAHAAwAAQAAAAAAAAAIAAwAAAAAAAAAAAAJAAwAAQAAAAAAAAAAAA0AAQAAAAAAAAABAA0AAAAAAAAAAAACAA0AAQAAAAAAAAADAA0AAAAAAAAAAAAEAA0AAQAAAAAAAAAFAA0AAAAAAAAAAAAGAA0AAQAAAAAAAAAHAA0AAAAAAAAAAAAIAA0AAQAAAAAAAAAJAA0AAAAAAAAAAAAAAA4AAAAAAAAAAAABAA4AAQAAAAAAAAACAA4AAAAAAAAAAAADAA4AAQAAAAAAAAAEAA4AAAAAAAAAAAAFAA4AAQAAAAAAAAAGAA4AAAAAAAAAAAAHAA4AAQAAAAAAAAAIAA4AAAAAAAAAAAAJAA4AAQAAAAAAAAAAAA8AAQAAAAAAAAABAA8AAAAAAAAAAAACAA8AAQAAAAAAAAADAA8AAAAAAAAAAAAEAA8AAQAAAAAAAAAFAA8AAAAAAAAAAAAGAA8AAQAAAAAAAAAHAA8AAAAAAAAAAAAIAA8AAQAAAAAAAAAJAA8AAAAAAAAAAAAAABAAAAAAAAAAAAABABAAAQAAAAAAAAACABAAAAAAAAAAAAADABAAAQAAAAAAAAAEABAAAAAAAAAAAAAFABAAAQAAAAAAAAAGABAAAAAAAAAAAAAHABAAAQAAAAAAAAAIABAAAAAAAAAAAAAJABAAAQAAAAAAAAAAABEAAQAAAAAAAAABABEAAAAAAAAAAAACABEAAQAAAAAAAAADABEAAAAAAAAAAAAEABEAAQAAAAAAAAAFABEAAAAAAAAAAAAGABEAAQAAAAAAAAAHABEAAAAAAAAAAAAIABEAAQAAAAAAAAAJABEAAAAAAAAAAAA=")

[node name="TileMapClue" parent="HBoxContainer/GameBoardHolder/GameBoard" index="4" unique_id=1018272685]
clues_by_cell = Dictionary[Vector2i, int]({
Vector2i(0, 5): 5,
Vector2i(0, 15): 11,
Vector2i(2, 1): 4,
Vector2i(2, 7): 5,
Vector2i(2, 14): 4,
Vector2i(3, 4): 3,
Vector2i(3, 15): 7,
Vector2i(4, 3): 2,
Vector2i(4, 9): 4,
Vector2i(5, 12): 2,
Vector2i(6, 11): 8,
Vector2i(7, 7): 7,
Vector2i(7, 15): 4,
Vector2i(8, 4): 6,
Vector2i(8, 12): 2,
Vector2i(8, 17): 4,
Vector2i(9, 8): 4,
Vector2i(9, 10): 3
})

[node name="CursorableArea" parent="HBoxContainer/GameBoardHolder/GameBoard" index="6" unique_id=1710127712]
cursorable_rect = Rect2(0, 0, 2560, 4608)

[node name="DemoLog" parent="HBoxContainer" unique_id=1089654608 instance=ExtResource("3_16nxf")]
unique_name_in_owner = true
layout_mode = 2

[node name="PerformanceSuiteTimer" type="Timer" parent="." unique_id=1520237435]
unique_name_in_owner = true
wait_time = 0.25

[node name="CommandPalette" parent="." unique_id=1368678133 instance=ExtResource("4_ulbbn")]
unique_name_in_owner = true

[node name="PuzzleArchive" type="Node" parent="." unique_id=226330064]
unique_name_in_owner = true
script = ExtResource("5_ts2fd")

[editable path="HBoxContainer/GameBoardHolder/GameBoard"]
